# fintrak

./: .env  .gitignore  README.md  build.sh  docker-compose.yml  test.sh
.github/workflows/: tests.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  development.md
backend/migrations/: 000_init.sql  20241102070311_init.sql  20241105175105_app_schema.sql
backend/src/: auth.rs  categories.rs  insights.rs  main.rs  router.rs  transactions.rs
backend/src/tests/: mod.rs  test_app_health.rs  test_register_user.rs  test_user_login.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts.timestamp-1734960973895-3946501583137.mjs
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/components/: Dashboard.tsx  EditModal.tsx  FilterModal.tsx  OverViewChart.tsx  SideBar.tsx  Summary.tsx  TransactionModal.tsx  deleteModal.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/pages/: 403.tsx  404.tsx  Budget.tsx  Categories.tsx  Home.tsx  Login.tsx  Logout.tsx  Register.tsx  Settings.tsx  Transactions.tsx
