[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie-private"] }
axum-macros = "0.4.0"
bcrypt = "0.15.0"
http = "1.0.0"
rand = "0.8.5"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = {version = "0.8.2", features = ["runtime-tokio","macros", "time", "tls-native-tls", "migrate", "postgres", "uuid", "bigdecimal"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
time = { version = "0.3.20", features = ["serde"] }
tokio = {version = "1.37.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
dotenv = "0.15.0"
axum-test = "16.3.0"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = [ "serde-json" ] }
